--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
             "js": ["content.js"]
         }
     ],
-    "browser_actions": [
-        
-    ]
+    "browser_action": {
+        "default_icon": "icon.png"
+      }
+    
 }
