--- a/manifest.json
+++ b/manifest.json
@@ -5,13 +5,16 @@
     "content_scripts": [
         {
             "matches": [
-                "<all_urls>"
+              "<all_urls>"
             ],
             "js": ["content.js"]
-        }
+          }
     ],
     "browser_action": {
         "default_icon": "icon.png"
-      }
+      },
+    "background": {
+        "scripts": ["background.js"]
+    }
     
 }
